# LLMTrigger

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  README.zh-CN.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
docs/: TRIGGER_MODE_DESIGN.md  api_reference.md  architecture.md  rules_api_curl_tests.md  technical_design_specification.md
examples/: README.md
examples/01-traditional-rule/: README.md  create_traditional_rule.sh
examples/02-llm-realtime/: README.md  create_llm_price_rule.sh
examples/02-llm-rule/: README.md  create_llm_price_rule.sh  send_price_events.py
examples/03-llm-batch/: README.md  create_batch_rule.sh  send_trade_signals.py
examples/04-llm-interval/: README.md  create_interval_rule.sh  send_metrics.py
llmtrigger/: worker.py
llmtrigger/api/: app.py  deps.py
llmtrigger/api/routes/: history.py  rules.py  test.py
llmtrigger/context/: manager.py  summarizer.py
llmtrigger/core/: config.py  logging.py
llmtrigger/engine/: expression.py  router.py  traditional.py
llmtrigger/messaging/: consumer.py  handler.py
llmtrigger/models/: event.py  execution.py  notification.py  rule.py
llmtrigger/notification/: dispatcher.py  rate_limiter.py  worker.py
llmtrigger/observability/: metrics.py  tracing.py
llmtrigger/schemas/: common.py  rule.py  test.py
llmtrigger/storage/: auxiliary.py  context_store.py  redis_client.py  rule_store.py
scripts/: README.md  quick_test.sh  send_test_events.py
tests/: conftest.py  test_error_responses.py  test_rules_api.py
(+8 files in other folders)
