[project]
name = "llmtrigger"
version = "0.1.0"
description = "Hybrid Intelligent Event Trigger System - A flexible event notification service combining traditional rule engines with LLM-based intelligent reasoning"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "aixtrade team"}
]
keywords = ["event-trigger", "llm", "notification", "rules-engine"]
dependencies = [
    "aio-pika>=9.5.8",
    "aiogram>=3.24.0",
    "aiosmtplib>=5.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai>=2.15.0",
    "prometheus-client>=0.23.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "redis[hiredis]>=7.1.0",
    "simpleeval>=1.0.3",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
